2005-10-21  Rodney Dawes  <dobey@novell.com>

	* data/images/Makefile.am: Install the 16px and 22px versions into the
	16x16 and 22x22 hicolor directories, not the 24px icon

2005-10-21  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: require mono 1.1.9
	* hal-sharp/Makefile.am: Install hal-sharp.dll.config, 
	not hal-sharp.dll.config.in

2005-10-21  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Require gtk-sharp 2.3.91 and ipod-sharp 0.5.8

	* Makefile.am: Updated DISTCLEANFILES/CLEANFILES
	* configure.ac: Removed data/banshee.desktop.in

	* mediaengines/vlc/Makefile.am: Added package rule for creating separate
	binary VLC mediaengine tarball

	* data/images/Makefile.am: Updated icon installation rules
	* data/images/Makefile.am.build: Removed, managing manually

	* data/glade/about.glade: removed, using gnome about dialog
	* data/glade/player.glade: Add help menu item for version information

	* data/banshee.desktop.in.in: Updated desktop file to exec banshee and
	use new icon 
	* data/org.gnome.Banshee.service.in: Exec banshee
	* data/Makefile.am: Updated desktop file and schema install rules

	* src/PlaylistColumns.cs: Fix bug regarding default column sizing (the one 
	Nat has been complaining about)
	* src/AboutBox.cs: Use Gnome About Dialog
	* src/VersionInformationDialog.cs: Version Information Dialog, move from old
	About Box, invoke from Help menu
	
	* src/BurnCore.cs: 
	* src/Preferences.cs:
	* src/SourceView.cs:
	* src/PlayerInterface.cs: Lots of cleaning, Use new window icon, 
	get rid of Gdk Thead junk

	* src/PlaylistModel.cs: Use Application.Invoke smartly, fixed performance 
	bug regarding loading a large list of tracks


	* src/Core.cs:
	* src/Library.cs: Clean up, get rid of Gdk Thread junk

	* src/ThemeIcons.cs: Provide a WindowManager icon pixbuf; will expand to 
	new Icon Theme code (vs. stock icon code)
	* src/DBusIPC.cs: Add more DBus methods (show/hide/play/pause/query*)